RESOLVED FIXED92097
[Chromium] Fix a class/struct mismatch error in TestDelegate.h (showing up on clang)
https://bugs.webkit.org/show_bug.cgi?id=92097
Summary [Chromium] Fix a class/struct mismatch error in TestDelegate.h (showing up on...
Peter Beverloo
Reported 2012-07-24 04:35:09 PDT
[Chromium] Fix a class/struct mismatch error in TestDelegate.h (showing up on clang)
Attachments
Patch (1.36 KB, patch)
2012-07-24 04:36 PDT, Peter Beverloo
no flags
Peter Beverloo
Comment 1 2012-07-24 04:36:30 PDT
Peter Beverloo
Comment 2 2012-07-24 04:37:33 PDT
Kentaro Hara
Comment 3 2012-07-24 16:37:21 PDT
Comment on attachment 154017 [details] Patch Unsetting r?
Note You need to log in before you can comment on or make changes to this bug.