[Chromium] Fix a class/struct mismatch error in TestDelegate.h (showing up on clang) https://bugs.webkit.org/show_bug.cgi?id=92097

Unreviewed build fix.

WebContextMenuData is declared as a struct in Source/WebKit/chromium/public/WebContextMenuData.h,
but TestDelegate.h forward declares it as a class.

* DumpRenderTree/chromium/TestRunner/TestDelegate.h:
(WebKit):

Canonical link: https://commits.webkit.org/109907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123457 268f45cc-cd09-0410-ab3c-d52691b4dbfc